Merge explorer and data orchestration perspective #5995 Fix tab move #4211 Add default methods to IHopPerspective interface Normalize filename everywhere (tab tooltip, explorer copy path, monitor refresh...) Add markdown icon